# rust-neural-network

./: .gitignore  Cargo.toml  LICENSE  README.md  saved-network-mnist-10.json  saved-network-mnist-softmax.json  saved-network-mnist.json  saved-network.json
linear-algebra/: Cargo.toml
linear-algebra/src/: lib.rs
linear-algebra/src/linear_algebra_tests/: mod.rs
linear-regression/: Cargo.toml
linear-regression/src/: lib.rs
linear-regression/src/linear_regression_tests/: mod.rs
mnist/: Cargo.toml
mnist-webasm/: Cargo.toml
mnist-webasm/src/: lib.rs
mnist/src/: data_augmentation.rs  image_export.rs  load_mnist_data.rs  main.rs
neural-network/: Cargo.toml
neural-network/src/: activations.rs  layer.rs  lib.rs  loss_functions.rs  savable_neural_network.rs
src/: linear_algebra.rs  main.rs  network.rs  neural_network.rs
src/linear_algebra_tests/: mod.rs
src/mnist/: load_mnist_data.rs  main.rs
xor/: Cargo.toml
xor/src/: main.rs
