[package]
name = "mnist-webasm"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
neural-network = {path = "../neural-network"}
wasm-bindgen = "0.2.88"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
