[package]
name = "neural-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linear-algebra = {path = "../linear-algebra"}
ndarray = {version = "0.15.6", features = ["serde"]}
ndarray-rand = "0.14.0"
rand = "0.8.5"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.108"
